plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'application'
    id "com.github.johnrengelman.shadow" version "5.2.0"

}

group 'dr'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile 'com.jfoenix:jfoenix:9.0.8'
    compile 'de.jensd:fontawesomefx:8.9'
    compile 'com.github.jiconfont:jiconfont-javafx:1.0.0'
    compile 'org.kordamp.bootstrapfx:bootstrapfx-core:0.2.4'
    implementation 'org.controlsfx:controlsfx:11.0.1'

// https://mvnrepository.com/artifact/org.apache.ant/ant-compress
    compile group: 'org.apache.ant', name: 'ant-compress', version: '1.5'
    //Jackson
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
    //query
    compile group: 'org.lockss', name: 'josql', version: '2.2-p1'
    compile 'com.airhacks:afterburner.fx:1.6.0'

}


javafx {
    version = "12"
    modules = [ 'javafx.controls', 'javafx.fxml' ,'javafx.swing']

}
run {
    run {
        jvmArgs = [
                '--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
                '--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
                '--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
                '--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
                '--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED',
        ]    }
}
mainClassName = 'dr.Main'
